add customer,bookedseat,disocunt,  config redis and process create ticket, optimize service method with repository